index.html fixed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 			<div class="col-sm fs-4">
-				porra
+				tests
 			</div>
 		</div>
 		<h4></h4>
