navbar collapse fixed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
-	<ul id="navbarSupportedContent" class="nav justify-content-end nav-pills collapse navbar-collapse text-center">
+	<ul id="navbarSupportedContent" class="nav justify-content-center justify-content-md-end nav-pills collapse navbar-collapse text-center">
 		<li class="nav-item">
 			<a style="transform: scale(1.5)" target="_blank"  href="https://github.com/nicolaspiet" class="nav-link icon-social"><i class="bi text-black bi-github"></i></a>
 		</li>
